--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title><%=head %></title>
-    <link rel='stylesheet' href='http://www.appinessworld.com/css/master.css'/>
-    <link rel='stylesheet' href='http://www.appinessworld.com/fonts/bellmt/stylesheet.css'/>
+    <link rel='stylesheet' href='https://www.appinessworld.com/css/master.css'/>
+    <link rel='stylesheet' href='https://www.appinessworld.com/fonts/bellmt/stylesheet.css'/>
 </head>
 <body>
 <div style="top: 0px!important;height: 50px;width: 100%;background-color: black!important;"></div>
