--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -6,8 +6,7 @@
     <link rel='stylesheet' href='https://www.appinessworld.com/fonts/bellmt/stylesheet.css'/>
 </head>
 <body>
-<div style="top: 0px!important;height: 50px;width: 100%;background-color: black!important;"></div>
-<div style="margin-top: 200px" class="main-container blog-main"><%- my_form_content %></div>
+<div  class="main-container blog-main"><%- my_form_content %></div>
 </body>
 </html>
 users
